design premium cars html page body in useDashboard.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/userDashboard.html
@@ -162,19 +162,19 @@
     <h2 class="text-center mt-4" style="color: white">Our Fleet</h2>
     <div class="row" id="row" style="height: 260px">
       <div class="box mt-0">
-        <a href="generalCars.html"><img src="assests/images/General%20Cars/general_cars.jpg"></a>
+        <a href="generalCars.html"><img src="assests/images/General_Cars/general_cars.jpg"></a>
         <div class="content">
           <h2>General Cars<br> <span>We have 30 cars <br>to rent in <br>general car category</span></h2>
         </div>
       </div>
       <div class="box mt-0 ">
-        <a href="premiumCars.html"><img src="assests/images/Premium%20Cars/premium_cars.jpg"></a>
+        <a href="premiumCars.html"><img src="assests/images/Premium_Cars/premium_cars.jpg"></a>
         <div class="content">
           <h2>Premium Cars <br> <span>We have 14 cars <br> to rent in <br> premium car category</span></h2>
         </div>
       </div>
       <div class="box mt-0">
-        <a href="luxuryCars.html"><img src="assests/images/Luxury%20Cars/luxury_Carls.jpg"></a>
+        <a href="luxuryCars.html"><img src="assests/images/Luxury_Cars/luxury_Carls.jpg"></a>
         <div class="content">
           <h2>Luxury Cars <br> <span>We have 30 cars <br> to rent in <br> luxury car category</span></h2>
         </div>
