--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/generalCars.html
@@ -55,7 +55,6 @@
             </ul>
         </div>
     </nav>
-
 </header>
 
 <main  class="container-fluid">
@@ -65,7 +64,6 @@
             <p class="lead">We can offer you 30 cars for rent under the General Cars category across five brands</p>
         </div>
     </div>
-
         <div class="row">
             <div class="col-2 bg-black">
                 <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
@@ -75,7 +73,6 @@
                             <a class="nav-link" href="#NoOfPassengers">No Of Passengers</a>
                             <nav class="nav nav-pills flex-column">
                                 <a class="nav-link ms-3 my-1" href="#four">Four Passengers</a>
-                                <!--                                <a class="nav-link ms-3 my-1" href="#item-1-2">Item 1-2</a>-->
                             </nav>
                             <a class="nav-link" href="#transmissionType">Transmission Type</a>
                             <nav class="nav nav-pills flex-column">
@@ -100,7 +97,7 @@
                 </nav>
             </div>
             <div class="col-10">
-                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2 me-2 mt-3" tabindex="0">
+                <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2 me-2 mt-3 ms-2" tabindex="0">
                     <div id="all">
                         <h4>All</h4>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
@@ -166,10 +163,10 @@
                             </div>
                         </div>
                     </div>
-                    <div id="NoOfPassengers" class="mt-3">
+                    <div id="NoOfPassengers" class="mt-4">
                         <h4>No Of Passengers</h4>
                     </div>
-                    <div id="four" class="mt-2">
+                    <div id="four" class="mt-3">
                         <h5>Four Passengers</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -234,10 +231,10 @@
                             </div>
                         </div>
                     </div>
-                    <div id="transmissionType" class="mt-3">
+                    <div id="transmissionType" class="mt-4">
                         <h4>Transmission Type</h4>
                     </div>
-                    <div id="manual" class="mt-2">
+                    <div id="manual" class="mt-3">
                         <h5>Manual</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -254,7 +251,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="auto" class="mt-2">
+                    <div id="auto" class="mt-3">
                         <h5>Auto</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -307,10 +304,10 @@
                             </div>
                         </div>
                     </div>
-                    <div id="brand" class="mt-3">
+                    <div id="brand" class="mt-4">
                         <h4>Brand</h4>
                     </div>
-                    <div id="suzuki" class="mt-2">
+                    <div id="suzuki" class="mt-3">
                         <h5>Suzuki</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -351,7 +348,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="perodua" class="mt-2">
+                    <div id="perodua" class="mt-3">
                         <h5>Perodua</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -368,7 +365,7 @@
                             </div>
                         </div>
                     </div>
-                    <div id="toyota" class="mt-2">
+                    <div id="toyota" class="mt-3">
                         <h5>Toyota</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -385,13 +382,75 @@
                             </div>
                         </div>
                     </div>
-                    <div id="price" class="mt-3">
+                    <div id="price" class="mt-4">
                         <h4>Price</h4>
+                        <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto-Premium-Manual/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Suzuki Alto - Premium - Manual</h5>
+                                        <p class="card-text">We have 7 Suzuki Alto - Premium - Manual cars to offer you to rent.<br> Daily
+                                            Rate : 2500 <br> Monthly
+                                            Rate : Rs 64,350.00 </p>
+                                        <a href="#" class="btn btn-dark">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="assests/images/General_Cars/Suzuki_Alto_K10-Auto/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Suzuki Alto K10 - Auto</h5>
+                                        <p class="card-text">We have 8 Suzuki Alto K10 - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3000 <br> Monthly
+                                            Rate : Rs 71,390.00 </p>
+                                        <a href="#" class="btn btn-dark">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="assests/images/General_Cars/Suzuki_Celerio-Auto/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Suzuki Celerio - Auto</h5>
+                                        <p class="card-text">We have 5 Suzuki Celerio - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3300 <br> Monthly
+                                            Rate : Rs 77,220.00 </p>
+                                        <a href="#" class="btn btn-dark">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="assests/images/General_Cars/Perodua_(Daihatsu)_Axia-Auto/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Perodua (Daihatsu) Axia - Auto</h5>
+                                        <p class="card-text">We have 2 Perodua (Daihatsu) Axia - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 3800 <br> Monthly
+                                            Rate : Rs 90,200.00 </p>
+                                        <a href="#" class="btn btn-dark">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card h-100">
+                                    <img src="assests/images/General_Cars/Toyota_PriusC-Aqua-Auto/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Toyota Prius C/ Aqua - Auto</h5>
+                                        <p class="card-text">We have 8 Toyota Prius C/ Aqua - Auto cars to offer you to rent.<br> Daily
+                                            Rate : 5000 <br> Monthly
+                                            Rate : Rs 110,330.00 </p>
+                                        <a href="#" class="btn btn-dark">More Details</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div id="fuel"class="mt-3">
+                    <div id="fuel"class="mt-4">
                         <h4>Fuel Type</h4>
                     </div>
-                    <div id="petrol"class="mt-2">
+                    <div id="petrol"class="mt-3">
                         <h5>Petrol</h5>
                         <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
                             <div class="col">
@@ -456,14 +515,12 @@
                             </div>
                         </div>
                     </div>
-                    <div id="diesel" class="mt-2">
+                    <div id="diesel" class="mt-3">
                         <h5>Diesel</h5>
                     </div>
                 </div>
             </div>
         </div>
-
-
 </main>
 
 
