--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -58,7 +58,15 @@
 
 </header>
 
-<main></main>
+<main  class="container-fluid">
+    <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 110px; color:white;">
+        <div class="col-12">
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;">Luxury Cars</h1>
+            <p class="lead">We can offer you 06 cars for rent under the Luxury Cars category across five brands</p>
+        </div>
+    </div>
+</main>
+
 
 </body>
 </html>
