--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/luxuryCars.html
@@ -65,6 +65,321 @@
             <p class="lead">We can offer you 06 cars for rent under the Luxury Cars category across five brands</p>
         </div>
     </div>
+    <div class="row">
+        <div class="col-2 bg-black">
+            <nav id="navbar-example3" class="h-100 flex-column align-items-stretch pe-4 border-end">
+                <div class="row  position-fixed ms-1" style="top: 90px">
+                    <nav class="nav nav-pills flex-column" id="categories">
+                        <a class="nav-link" href="#all">All</a>
+                        <a class="nav-link" href="#NoOfPassengers">No Of Passengers</a>
+                        <nav class="nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#two">Two Passengers</a>
+                            <a class="nav-link ms-3 my-1" href="#five">Five Passengers</a>
+                        </nav>
+                        <a class="nav-link" href="#transmissionType">Transmission Type</a>
+                        <nav class="nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#auto">Auto</a>
+                        </nav>
+                        <a class="nav-link" href="#brand">Brand</a>
+                        <nav class="nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#benz">Mercedes-Benz</a>
+                            <a class="nav-link ms-3 my-1" href="#bmw">BMW</a>
+                            <a class="nav-link ms-3 my-1" href="#toyota">Toyota</a>
+                        </nav>
+                        <a class="nav-link" href="#price">Price</a>
+                        <a class="nav-link" href="#fuel">Fuel type</a>
+                        <nav class="nav nav-pills flex-column">
+                            <a class="nav-link ms-3 my-1" href="#petrol">Petrol</a>
+                            <a class="nav-link ms-3 my-1" href="#diesel">Diesel</a>
+                        </nav>
+                    </nav >
+                </div>
+
+            </nav>
+        </div>
+        <div class="col-10">
+            <div data-bs-spy="scroll" data-bs-target="#navbar-example3" data-bs-smooth-scroll="true" class="scrollspy-example-2 me-2 mt-3 ms-2" tabindex="0">
+                <div id="all">
+                    <h4>All</h4>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="NoOfPassengers" class="mt-4">
+                    <h4>No Of Passengers</h4>
+                </div>
+                <div id="two" class="mt-3">
+                    <h5>Two Passengers</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="five" class="mt-3">
+                    <h5>Five Passengers</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="transmissionType" class="mt-4">
+                    <h4>Transmission Type</h4>
+                </div>
+                <div id="auto" class="mt-3">
+                    <h5>Auto</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="brand" class="mt-4">
+                    <h4>Brand</h4>
+                </div>
+                <div id="benz" class="mt-3">
+                    <h5>Mercedes-Benz</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="bmw" class="mt-3">
+                    <h5>BMW</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="toyota" class="mt-3">
+                    <h5>Toyota</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="price" class="mt-4">
+                    <h4>Price</h4>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="fuel"class="mt-4">
+                    <h4>Fuel Type</h4>
+                </div>
+                <div id="petrol"class="mt-3">
+                    <h5>Petrol</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/BMW_i8/back.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">BMW i8</h5>
+                                    <p class="card-text">We have 2 BMW i8 cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Toyota_Premio/side.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Toyota Premio</h5>
+                                    <p class="card-text">We have 2 Toyota Premio cars to offer you to rent.<br> Daily
+                                        Rate : 10,000 <br> Monthly
+                                        Rate : Rs 227,150.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="diesel" class="mt-3">
+                    <h5>Diesel</h5>
+                    <div class="row row-cols-1 row-cols-md-3 g-4 mt-2">
+                        <div class="col">
+                            <div class="card h-100">
+                                <img src="assests/images/Luxury_Cars/Mercedes/front.jpg" class="card-img-top" alt="Suzuki Alto - Premium - Manual">
+                                <div class="card-body">
+                                    <h5 class="card-title">Mercedes-Benz</h5>
+                                    <p class="card-text">We have 2 Mercedes-Benz cars to offer you to rent.<br> Daily
+                                        Rate : 18,000 <br> Monthly
+                                        Rate : Rs 300,000.00 </p>
+                                    <a href="#" class="btn btn-dark">More Details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
 
 
