add design to categories when select categories ,generl,premium,luxuryCars.html file in SpringFrontEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/premiumCars.html
@@ -21,6 +21,13 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
     <!------------------------------------------------------------------->
 
+    <style>
+        .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+            color: var(--bs-nav-pills-link-active-color);
+            background-color: #585858;
+        }
+    </style>
+
 </head>
 <body>
 
@@ -445,5 +452,7 @@
     </div>
 </main>
 
+<script src="assests/js/bootstrap.min.js"></script>
+<script src="assests/JQuery/jquery-3.6.1.min.js"></script>
 </body>
 </html>
